--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Federal Associados - Conectividade Sem Limites</title>
-    <meta name="description" content="Assine seu plano da Federal Associados com internet e ligações ilimitadas para todo o Brasil" />
+    <meta name="description" content="Cadastro de associação" />
     <meta name="keywords" content="Federal Associados, planos de internet, internet ilimitada, internet 4G, plano 5G, associação de internet, plano sem fidelidade, internet sem SPC, plano com ligações ilimitadas, internet com cobertura nacional, planos para celular, internet para todo o Brasil, planos baratos de internet, Federal planos, contratar plano de internet, plano com WhatsApp grátis">
-    <meta property="og:title" content="Assine seu plano da Federal Associados com internet e ligações ilimitadas para todo o Brasil" />
-    <meta property="og:description" content="Assine seu plano da Federal Associados com internet e ligações ilimitadas para todo o Brasil" />
+    <meta property="og:title" content="Federal Associados - Conectividade Sem Limites" />
+    <meta property="og:description" content="Cadastro de associação" />
+    <meta property="og:image" content="/images/image copy copy copy copy copy copy copy copy copy copy copy copy copy.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Federal Associados - Conectividade Sem Limites" />
+    <meta name="twitter:description" content="Cadastro de associação" />
+    <meta name="twitter:image" content="/images/image copy copy copy copy copy copy copy copy copy copy copy copy copy.png" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Lato:wght@400;700&display=swap" rel="stylesheet" />
     
     <!-- Google tag (gtag.js) -->
